--- a/package.json
+++ b/package.json
@@ -1,11 +1,27 @@
 {
+  "name": "ExpenseManager2",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "livereload": "^0.9.1",
-    "mogodb": "^0.0.1-security",
-    "mongoose": "^5.11.15",
-    "multer": "^1.4.2"
-  }
+    "mongodb": "^3.6.4"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zsoltelekes09/ExpenseManager2.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/zsoltelekes09/ExpenseManager2/issues"
+  },
+  "homepage": "https://github.com/zsoltelekes09/ExpenseManager2#readme"
 }
